syntax = "proto3";

package ocf.cloud.resourceaggregate.pb;

import "github.com/go-ocf/cloud/resource-aggregate/pb/events.proto";
import "github.com/go-ocf/cloud/resource-aggregate/pb/resources.proto";

option go_package = "github.com/go-ocf/cloud/resource-aggregate/pb;pb";

message AuthorizationContext {
    string device_id = 1;
}

message CommandMetadata {
    string connection_id = 1;
    uint64 sequence = 2;
}

//******************************************************************************************************************************************************
// Publish / Unpublish Resources  
//                        
// ┌──────────┐          ┌───────┐             ┌──────────────────┐          ┌─────────┐
// │OCF Server│          │Gateway│             │Resource Aggregate│          │Event Bus│
// └──────────┘          └───┬───┘             └────────┬─────────┘          └─────────┘
//     ┌┴┐[UPDATE] '/oic/rd'┌┴┐                         │                         │     
//     │ │ ───────────────> │ │                         │                         │     
//     │ │                  │ │                         │                         │     
//     │ │                  │ │ PublishResourceRequest  ┌┴┐                       │     
//     │ │                  │ │ ───────────────────────>│ │                       │     
//     │ │                  │ │                         │ │                       │     
//     │ │                  │ │ PublishResourceResponse │ │                       │     
//     │ │                  │ │ <───────────────────────│ │                       │     
//     │ │                  └┬┘                         │ │                       │     
//     │ │                   │                          │ │   ResourcePublished   │     
//     │ │                   │                          │ │ ──────────────────────>     
//     │ │                   │                          └┬┘                       │     
//     │ │                  ┌┴┐                 ResourcePublished                 │     
//     │ │                  │ │ <──────────────────────────────────────────────────     
//     │ │                  │ │                         │                         │     
//     │ │       OK         │ │                         │                         │     
//     │ │ <─────────────── │ │                         │                         │     
// ┌───└┬┘────┐          ┌──└┬┘──┐             ┌────────┴─────────┐          ┌─────────┐
// │OCF Server│          │Gateway│             │Resource Aggregate│          │Event Bus│
// └──────────┘          └───────┘             └──────────────────┘          └─────────┘
//******************************************************************************************************************************************************

// https://github.com/openconnectivityfoundation/core/blob/master/oic.wk.rd.raml#L65
message PublishResourceRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    Resource resource = 3; // Resource publish is atomic - PublishResource command per link from list. The CoAP-Gateway is responsible for the transaction.
    int32 time_to_live = 4;
    CommandMetadata command_metadata = 5;
}

message PublishResourceResponse {
    AuditContext audit_context = 1;
    int64 instance_id = 2;
}

// https://github.com/openconnectivityfoundation/core/blob/master/oic.wk.rd.raml #Specification CR needed
message UnpublishResourceRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    CommandMetadata command_metadata = 3;
}

message UnpublishResourceResponse {
    AuditContext audit_context = 1;
}

//******************************************************************************************************************************************************
// Resource content changed
// (changed from the cloud or locally)   
//                                                                                                                                                         
// ┌──────────┐                           ┌───────┐                    ┌──────────────────┐          ┌─────────┐
// │OCF Server│                           │Gateway│                    │Resource Aggregate│          │Event Bus│
// └──────────┘                           └───┬───┘                    └────────┬─────────┘          └─────────┘
//      │[NOTIFY] 'oic.r.temperature' changed┌┴┐                                │                         │     
//      │ ──────────────────────────────────>│ │                                │                         │     
//      │                                    │ │                                │                         │     
//      │                                    │ │ NotifyResourceChangedRequest  ┌┴┐                        │     
//      │                                    │ │ ─────────────────────────────>│ │                        │     
//      │                                    └┬┘                               │ │                        │     
//      │                                     │ NotifyResourceChangedResponse  │ │                        │     
//      │                                     │ <──────────────────────────────│ │                        │     
//      │                                     │                                └┬┘                        │     
//      │                                     │                                 │     ResourceChanged     │     
//      │                                     │                                 │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ >│     
// ┌──────────┐                           ┌───┴───┐                    ┌────────┴─────────┐          ┌─────────┐
// │OCF Server│                           │Gateway│                    │Resource Aggregate│          │Event Bus│
// └──────────┘                           └───────┘                    └──────────────────┘          └─────────┘
//******************************************************************************************************************************************************

message NotifyResourceChangedRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    Content content = 3;
    CommandMetadata command_metadata = 4;
    Status status = 5;
}

message NotifyResourceChangedResponse {
    AuditContext audit_context = 1;
}

//*******************************************************************************************************************************************************
// Update Resource   
//                                                                                                                                                                                          
// ┌──────────┐                           ┌───────┐                    ┌──────────────────┐          ┌─────────┐          ┌──────┐     
// │OCF Server│                           │Gateway│                    │Resource Aggregate│          │Event Bus│          │Client│     
// └──────────┘                           └───┬───┘                    └────────┬─────────┘          └─────────┘          └──────┘     
//      │                                     │                                ┌┴┐          UpdateResourceRequest           ┌┴┐        
//      │                                     │                                │ │ <────────────────────────────────────────│ │        
//      │                                     │                                │ │                        │                 │ │        
//      │                                     │                                │ │          UpdateResourceResponse          │ │        
//      │                                     │                                │ │ ────────────────────────────────────────>│ │        
//      │                                     │                                └┬┘                        │                 │ │        
//      │                                     │                                 │  ResourceUpdatePending  │                 │ │        
//      │                                     │                                 │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ >│                 │ │        
//      │                                     │                                 │                         │                 │ │        
//      │                                    ┌┴┐                  ResourceUpdatePending                   │                 │ │        
//      │                                    │ │ <─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ │                 │ │        
//      │                                    │ │                                │                         │                 │ │        
//     ┌┴┐   [UPDATE] 'oic.r.temperature'    │ │                                │                         │                 │ │        
//     │ │ <─────────────────────────────────│ │                                │                         │                 │ │        
//     └┬┘                                   │ │                                │                         │                 │ │        
//      │                 OK                 │ │                                │                         │                 │ │        
//      │ ──────────────────────────────────>│ │                                │                         │                 │ │        
//      │                                    │ │                                │                         │                 │ │        
//      │                                    │ │ ConfirmResourceUpdateRequest  ┌┴┐                        │                 │ │        
//      │                                    │ │ ─────────────────────────────>│ │                        │                 │ │        
//      │                                    └┬┘                               │ │                        │                 │ │        
//      │                                     │ ConfirmResourceUpdateResponse  │ │                        │                 │ │        
//      │                                     │ <──────────────────────────────│ │                        │                 │ │        
//      │                                     │                                └┬┘                        │                 │ │        
//      │                                     │                                 │     ResourceUpdated     │                 │ │        
//      │                                     │                                 │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ >│                 │ │        
//      │                                     │                                 │                         │                 └┬┘        
//      │                                     │                                 │                         │ ResourceUpdated  │         
//      │                                     │                                 │                         │ ─ ─ ─ ─ ─ ─ ─ ─ >│         
//      │                                     │                                 │                         │                  │         
//      │                                     │                                 │                         │                  │         
//      │                                     │     ╔══════════════════════════╗│                         │                  │         
// ═════╪═════════════════════════════════════╪═════╣ Resource content changed ╠╪═════════════════════════╪══════════════════╪═════════
//      │                                     │     ╚══════════════════════════╝│                         │                  │         
//      │                                     │                                 │                         │                  │         
//      │ [NOTIFY] 'oic.r.temperature' changed│                                 │                         │                  │         
//      │ ────────────────────────────────────>                                 │                         │                  │         
// ┌──────────┐                           ┌───┴───┐                    ┌────────┴─────────┐          ┌─────────┐          ┌──────┐     
// │OCF Server│                           │Gateway│                    │Resource Aggregate│          │Event Bus│          │Client│     
// └──────────┘                           └───────┘                    └──────────────────┘          └─────────┘          └──────┘     
//*******************************************************************************************************************************************************

message UpdateResourceRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    string correlation_id = 3;
    Content content = 4;
    string resource_interface = 5;
    CommandMetadata command_metadata = 100;
}

message UpdateResourceResponse {
    AuditContext audit_context = 1;
}

message ConfirmResourceUpdateRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    string correlation_id = 3;
    Status status = 4;
    Content content = 5;
    CommandMetadata command_metadata = 6;
}

message ConfirmResourceUpdateResponse {
    AuditContext audit_context = 1;
}

//*******************************************************************************************************************************************************
// Retrieve Resource     

// ┌──────────┐            ┌───────┐                     ┌──────────────────┐           ┌─────────┐           ┌──────┐
// │OCF Server│            │Gateway│                     │Resource Aggregate│           │Event Bus│           │Client│
// └──────────┘            └───┬───┘                     └────────┬─────────┘           └─────────┘           └──────┘
//      │                      │                                  ┌┴┐          RetrieveResourceRequest           ┌┴┐  
//      │                      │                                  │ │ <──────────────────────────────────────────│ │  
//      │                      │                                  │ │                        │                   │ │  
//      │                      │                                  │ │          RetrieveResourceResponse          │ │  
//      │                      │                                  │ │ ──────────────────────────────────────────>│ │  
//      │                      │                                  └┬┘                        │                   │ │  
//      │                      │                                  │ ResourceRetrievePending  │                   │ │  
//      │                      │                                  │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─>│                   │ │  
//      │                      │                                  │                          │                   │ │  
//      │                     ┌┴┐                   ResourceRetrievePending                  │                   │ │  
//      │                     │ │ <─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─                   │ │  
//      │                     │ │                                 │                          │                   │ │  
//     ┌┴┐[RETRIEVE] '/oic/d' │ │                                 │                          │                   │ │  
//     │ │ <───────────────── │ │                                 │                          │                   │ │  
//     └┬┘                    │ │                                 │                          │                   │ │  
//      │         OK          │ │                                 │                          │                   │ │  
//      │ ───────────────────>│ │                                 │                          │                   │ │  
//      │                     │ │                                 │                          │                   │ │  
//      │                     │ │ ConfirmResourceRetrieveRequest  ┌┴┐                        │                   │ │  
//      │                     │ │ ───────────────────────────────>│ │                        │                   │ │  
//      │                     └┬┘                                 │ │                        │                   │ │  
//      │                      │ConfirmResourceRetrieveResponse   │ │                        │                   │ │  
//      │                      │<──────────────────────────────── │ │                        │                   │ │  
//      │                      │                                  └┬┘                        │                   │ │  
//      │                      │                                  │    ResourceRetrieved     │                   │ │  
//      │                      │                                  │  ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─>│                   │ │  
//      │                      │                                  │                          │                   └┬┘  
//      │                      │                                  │                          │ ResourceRetrieved │    
//      │                      │                                  │                          │  ─ ─ ─ ─ ─ ─ ─ ─ ─>    
// ┌──────────┐            ┌───┴───┐                     ┌────────┴─────────┐           ┌─────────┐           ┌──────┐
// │OCF Server│            │Gateway│                     │Resource Aggregate│           │Event Bus│           │Client│
// └──────────┘            └───────┘                     └──────────────────┘           └─────────┘           └──────┘
//*******************************************************************************************************************************************************

message RetrieveResourceRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    string correlation_id = 3;
    string resource_interface = 4;
    CommandMetadata command_metadata = 5;
}

message RetrieveResourceResponse {
    AuditContext audit_context = 1;
}

message ConfirmResourceRetrieveRequest {
    AuthorizationContext authorization_context = 1;
    string resource_id = 2; // spec 1.3 - uuidV5(device_id+href), otherwise uuidV5(href)
    string correlation_id = 3;
    Status status = 4;
    Content content = 5;
    CommandMetadata command_metadata = 6;
}

message ConfirmResourceRetrieveResponse {
    AuditContext audit_context = 1;
}
